# new_energy_coder_club

./: .gitattributes  .gitmodules  CONTRIBUTING.md  PROJECT_INDEX.md  PROJECT_OPTIMIZATION_SUMMARY.md  README.md  README图片链接检查报告.md  cleanup_report.md  find_unused_images.py  image_files_list.txt  project_analysis_report_20250918_024953.csv  project_analysis_report_20250918_024953.html  project_analysis_report_20250918_024953.json  readme_image_references.txt  structure_blueprint_20250918_025302.json  structure_documentation_20250918_025302.md  unused_images_report.txt  仓库大小分析报告.md  新目录结构设计文档.md  未引用图片删除报告.md  迁移验证报告.md  项目结构分析报告.md
.atomcode/: project-instructions.md
.github/: PULL_REQUEST_TEMPLATE.md
.kimi/: project-instructions.md
.trae/: project-instructions.md
archive/: ARCHIVE_INFO.md
competitions/: README.md  README_1.md
config/: README.md  language_config.json  migration_config.json  中文优先命名规范.json
docs/: index.md  quality_monitoring_guide.md  凌敏菲.md
docs_new/: README.md
migration_logs/: migration_report_20250918_021011.json
projects/: DEMO.md  README.md  README_1.md  requirements.txt
quality_reports/: 质量监控报告_20250918_072027.md
scripts/: ORGANIZATION_REPORT.md  README.md  aggressive_flatten.py  analyze_structure.py  auto_migrator.py  backup.py  backup_manager.py  check_dependencies.py  deploy.py  doc_generator.py  final_optimization.py  migrate_repository.py  migration_tool.py  monitor.py  performance_tester.py  (+9 more)
skills/news-extractor/: .gitignore  SKILL.md  pyproject.toml
skills/news-extractor/scripts/crawlers/: __init__.py  tencent.py
(+501 files in other folders)
